force-app/main/default/objects/Query__c/Query__c.object-meta.xml
<CustomObject>
    <description>Contains the Questions and Answers</description>
    <label>Query</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>