force-app/main/default/objects/Query__c/recordTypes/MCQ.recordType-meta.xml
<RecordType>
    <fullName>MCQ</fullName>
    <active>true</active>
    <label>MCQ</label>
</RecordType>