force-app/main/default/objects/Query__c/recordTypes/non_MCQ.recordType-meta.xml
<RecordType>
    <fullName>non_MCQ</fullName>
    <active>true</active>
    <label>non-MCQ</label>
</RecordType>